--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -12,10 +12,12 @@
 <ion-content [fullscreen]="true">
   <div class="container">
     <ion-img [src]="imagem" [alt]="titulo"></ion-img>
+    <span style='font-size:100px;'></span>
+    <h1>{{titulo}}</h1>
 
     <div class="ion-text-center row">
       <h1>CRF!</h1>
-      <p id="p1">olá,Mundo!</p>
+      <p id="p1">URUBU!</p>
       <ion-button (click)="changeBook()">Exibir Imagem</ion-button>
     
       
