--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,12 +1,33 @@
 ion-img {
-    height: 400px;
+    height: auto;
     width: auto;
+    
 }
 
 .container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     background-color: red;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('/assets/flaFundo.jpg');
+    font-size: 20px;
 }
-
+h1{
+    color: rgb(255, 255, 255);
+    font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+p{
+    color: rgb(255, 255, 255);
+}
 .row{
-    background-image: url('/assets/fla2.jpg');
+    background: linear-gradient(0.25turn, #c70000, #000000);
+    height: auto;
+    width: auto;
 }
