--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,28 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <div class="ion-text-center">
-      <ion-title>
-        CRF
-      </ion-title>
-    </div>
-    
+    <ion-title>
+      Galeria de Imagens
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div class="container">
-    <ion-img [src]="imagem" [alt]="titulo"></ion-img>
-    <span style='font-size:100px;'></span>
-    <h1>{{titulo}}</h1>
-
-    <div class="ion-text-center row">
-      <h1>CRF!</h1>
-      <p id="p1">URUBU!</p>
-      <ion-button (click)="changeBook()">Exibir Imagem</ion-button>
-    
-      
-    </div>
+<ion-content>
+  <!-- Barra de Progresso -->
+  <div style="width: 100%; height: 10px; background-color: #eee; margin-top: 20px;">
+    <div id="progress-bar" style="width: 0%; height: 100%; background-color: #4caf50;"></div>
   </div>
-  
-  
+
+  <!-- Exibindo a imagem atual -->
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>{{ titulo }}</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-img [src]="imagem"></ion-img>
+    </ion-card-content>
+  </ion-card>
+
+  <!-- Botões para troca manual -->
+  <ion-button expand="full" (click)="trocarImagem()">Trocar Imagem</ion-button>
 </ion-content>
