--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="container">
   <!-- Barra de Progresso -->
   <div style="width: 100%; height: 10px; background-color: #eee; margin-top: 20px;">
     <div id="progress-bar" style="width: 0%; height: 100%; background-color: #4caf50;"></div>
