--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,11 +7,42 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Filmes</ion-card-title>
+      <ion-card-subtitle>MARVEL</ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="/assets/homenDeFerro.jpg" />
+          </ion-thumbnail>
+          <ion-label>Homen de Ferro</ion-label>
+        </ion-item>
 
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="/assets/osVingadores.jpg" />
+          </ion-thumbnail>
+          <ion-label>Os Vingadores</ion-label>
+        </ion-item>
+
+        <ion-item>
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="/assets/homenAranha.jpeg" />
+          </ion-thumbnail>
+          <ion-label>Homen Aranha</ion-label>
+        </ion-item>
+
+        <ion-item lines="none">
+          <ion-thumbnail slot="start">
+            <img alt="Silhouette of mountains" src="/assets/capitaoAmerica.webp" />
+          </ion-thumbnail>
+          <ion-label>Capitão America</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
  
 </ion-content>
