adicionando tela 2 e mudando iconis dos tabs

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,48 +1,65 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Lugares turisticos do Píaui
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-card>
+    <img alt="Silhouette of mountains" src="assets/serra.jpg" />
     <ion-card-header>
-      <ion-card-title>Filmes</ion-card-title>
-      <ion-card-subtitle>MARVEL</ion-card-subtitle>
+      <ion-card-title>Serra da Capivara</ion-card-title>
+      <ion-card-subtitle><a href="https://maps.app.goo.gl/zsANaP79E134NEEW7">Localização</a></ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <ion-list>
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="/assets/homenDeFerro.jpg" />
-          </ion-thumbnail>
-          <ion-label>Homen de Ferro</ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="/assets/osVingadores.jpg" />
-          </ion-thumbnail>
-          <ion-label>Os Vingadores</ion-label>
-        </ion-item>
-
-        <ion-item>
-          <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="/assets/homenAranha.jpeg" />
-          </ion-thumbnail>
-          <ion-label>Homen Aranha</ion-label>
-        </ion-item>
-
-        <ion-item lines="none">
-          <ion-thumbnail slot="start">
-            <img alt="Silhouette of mountains" src="/assets/capitaoAmerica.webp" />
-          </ion-thumbnail>
-          <ion-label>Capitão America</ion-label>
-        </ion-item>
-      </ion-list>
+      A Serra da Capivara é um Parque Nacional localizado no Piauí, Brasil, mundialmente famoso por sua vasta coleção de pinturas rupestres, que são evidências cruciais da presença humana antiga na América do Sul. É um Patrimônio Cultural da Humanidade pela UNESCO desde 1991. 
     </ion-card-content>
   </ion-card>
  
+  <ion-card>
+    <img alt="Silhouette of mountains" src="assets/delta.jpg" />
+    <ion-card-header>
+      <ion-card-title>Delta do Parnaíba</ion-card-title>
+      <ion-card-subtitle><a href="https://maps.app.goo.gl/cV8tsZZJerQuyoAX8">Localização</a></ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      O único delta em mar aberto das Américas. É um grande arquipélago com mais de 70 ilhas, manguezais, dunas e lagoas. O passeio de barco leva à Ilha das Canárias para ver a revoada dos guarás ao entardecer.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="assets/praiaCoqueiro.jpg" />
+    <ion-card-header>
+      <ion-card-title>Praia do Coqueiro</ion-card-title>
+      <ion-card-subtitle><a href="https://maps.app.goo.gl/ykfrptHfEWc3LdtV6">Localização</a></ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      Em Luís Correia, é conhecida por sua orla com coqueiros e um mar tranquilo.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="assets/serraDasConfusoes.jpg" />
+    <ion-card-header>
+      <ion-card-title>Parque Nacional Serra das Confusões</ion-card-title>
+      <ion-card-subtitle><a href="https://maps.app.goo.gl/gtojvw3LFnGcTFbeA">Localização</a></ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      Localizado no sul do estado, é o maior parque nacional do Piauí. Possui diversas formações rochosas e cavernas, com rica biodiversidade da caatinga.
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <img alt="Silhouette of mountains" src="assets/CaniondoRioPoti.jpg" />
+    <ion-card-header>
+      <ion-card-title>Cânion do Rio Poti</ion-card-title>
+      <ion-card-subtitle><a href="https://maps.app.goo.gl/8epjJrPvgGG7DNSX8">Localização</a></ion-card-subtitle>
+    </ion-card-header>
+    <ion-card-content>
+      No município de Buriti dos Montes, oferece um cenário impressionante com paredões rochosos que chegam a 60 metros de altura. 
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
