--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Lugares turisticos do Píaui
+      <h1>Lugares turisticos do Píaui</h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
